cabal-version: 2.2
name: multiformats 
version: 0.1.0.0
synopsis: A multiformats implementation using Haskell.
-- description:         
-- license: BSD3
-- license-file: LICENSE
author: Adithya Kumar
maintainer: adithya.nocreed@gmail.com
-- copyright:           
-- category:            
build-type: Simple
extra-source-files: ChangeLog.md

library multibase
  exposed-modules: Multibase
                 , Standard
  build-depends: base >=4.6 && <4.11
               , word8 <=0.1.2
               , bytestring >=0.9 && <0.11
  hs-source-dirs: multibase/src
  default-language: Haskell2010


library multihash
  exposed-modules: Multihash
                 , RaazMultihash
  build-depends: base >=4.6 && <4.11
               , bytestring >=0.9 && <0.11
               , raaz
  hs-source-dirs: multihash/src
  default-language: Haskell2010

